# sales-development-representative-agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
sales_outreach/: agent_orchestrator.py  app.py  logger.py  parameters.py
sales_outreach/_agents/: agent_initializer.py
sales_outreach/_agents/busy_sales_agent/: instructions.py
sales_outreach/_agents/emailer_agent/: handoff_description.py  instructions.py
sales_outreach/_agents/engaging_sales_agent/: instructions.py
sales_outreach/_agents/guardrail_name_check_agent/: instructions.py
sales_outreach/_agents/html_converter_agent/: instructions.py
sales_outreach/_agents/professional_sales_agent/: instructions.py
sales_outreach/_agents/sales_manager_agent/: instructions.py
sales_outreach/_agents/subject_writer_agent/: instructions.py
sales_outreach/client/: agent_construct.py  openai.py  sendgrid.py
sales_outreach/tools/: tools.py
