[project]
name = "sales-outreach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "openai>=2.26.0",
    "python-dotenv>=1.2.2",
    "pydantic-settings==2.13.1",
    "requests==2.32.5",
    "pypdf==6.7.5",
    "gradio==6.9.0",
    "pathlib==1.0.1",
    "sendgrid==6.12.5",
    "openai-agents==0.11.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
